# CppNNet

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Activation_Functions.h  Audio_Importer.h  CSV_Importer.h  CUDA_Neural_Trainer.h  MSGD_Neural_Trainer.h  Net_Importer.h  Neural_Layer.h  Neural_Trainer.h  Normalizer.h  util.h
src/: Audio_Importer.cpp  CMakeLists.txt  CSV_Importer.cpp  MSGD_Neural_Trainer.cpp  Net_Importer.cpp  Neural_Layer.cpp  Neural_Trainer.cpp  Normalizer.cpp  main.cpp
src/CUDA/: CMakeLists.txt  CUDA_Neural_Trainer.cu  cuNetwork.cuh  cuarray.cuh  cumatrix.cuh  kernel.cu  misc.cuh
tests/: CMakeLists.txt  CUDA_MAGIC_Net_Test.cpp  HIGGS.cpp  Iris_Dataset_Test.cpp  Iris_Dataset_gz_Test.cpp  MAGIC_Net_Test.cpp  MSGD_Iris_Dataset_Test.cpp  MSGD_MAGIC_Net_Test.cpp  MSGD_Neural_Training_Test.cpp  Neural_Layer_Test.cpp  Neural_Training_Test.cpp  Normalizer_Test.cpp
